fix spacing issue

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -6,7 +6,6 @@ html {
 #container {
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
   padding-top: 96px;
   padding-bottom: 16px;
 }
